changed addressBar color

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
   <meta name="apple-mobile-web-app-title" content="Sufiyan's Portfolio">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
+  <!-- Address Bar color-->
+  <meta name="theme-color" content="#222831">
+
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
@@ -34,7 +37,7 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = "1364099485";
+    const serviceWorkerVersion = "2349536963";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
