--- a/index.html
+++ b/index.html
@@ -35,9 +35,25 @@
   <title>Sufiyan's Portfolio</title>
   <link rel="manifest" href="manifest.json">
 
+  <!-- Primary Meta Tags -->
+  <meta name="title" content="Sufiyan's Portfolio" />
+  <meta name="description" content="A Backend Developer, Currently working at Accenture. Click to read more!" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Sufiyan's Portfolio" />
+  <meta property="og:description" content="A Backend Developer, Currently working at Accenture. Click to read more!" />
+  <meta property="og:image" content="thumbnail.png" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:title" content="Sufiyan's Portfolio" />
+  <meta property="twitter:description" content="A Backend Developer, Currently working at Accenture. Click to read more!" />
+  <meta property="twitter:image" content="thumbnail.png" />
+
   <script>
     // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = "307235749";
+    const serviceWorkerVersion = "2183934673";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
