--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Sufiyan's Portfolio" />
   <meta property="og:description" content="A Backend Developer, Currently working at Accenture. Click to read more!" />
-  <meta property="og:image" content="thumbnail.png" />
+  <meta property="og:image" content="https://sufiyansayyed.github.io/thumbnail.png" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:title" content="Sufiyan's Portfolio" />
   <meta property="twitter:description" content="A Backend Developer, Currently working at Accenture. Click to read more!" />
-  <meta property="twitter:image" content="thumbnail.png" />
+  <meta property="twitter:image" content="https://sufiyansayyed.github.io/thumbnail.png" />
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = "2183934673";
+    const serviceWorkerVersion = "909748734";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
